fix spacing below header

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -93,12 +93,17 @@ div.header-toolbar {
     background-color: #2f2736;
     font-size: 24px;
     font-weight: bold;
+    margin-bottom: 24px;
 }
 
 h1 {
-    font-weight: lighter
+    font-weight: lighter;
     font-family: var(--font-family);
     font-size: 36px;
+    margin: 0px;
+    margin-left: 6px;
+    text-align: left;
+    margin-bottom: -4px;
 }
 
 div.header-home-container {
